--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>JS Buch Übungen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test</h1>
-    <h2>Test2</h2>
-    <h3>Test3</h3>
+   <h1>JS Buch Übungen</h1> 
 </body>
+    <script src="scripts.js"></script>
 </html>
