--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <input type="text" name="vorname" />
       <label for="nachname">Nachname</label>
       <input type="text" name="nachname" />
-      <label for="emial">E-Mail</label>
+      <label for="email">E-Mail</label>
       <input type="text" name="email" required />
       <input type="submit" value="Submit" id="submitBtn" />
     </form>
