--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Buch Übungen</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
     <h1>JS Buch Übungen</h1>
@@ -34,8 +34,8 @@
       <input type="submit" value="Submit" id="submitBtn" />
     </form>
   </body>
-  <!-- <script src="./js/scripts.js"></script> -->
-  <!-- <script src="./js/functions.js"></script> -->
-  <!-- <script src="./js/events.js"></script> -->
-  <script src="./js/formulare.js"></script>
+  <!-- <script src="./src/js/scripts.js"></script> -->
+  <!-- <script src="./src/js/functions.js"></script> -->
+  <!-- <script src="./src/js/events.js"></script> -->
+  <script src="./src/js/formulare.js"></script>
 </html>
